--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,4 +1,4 @@
-<body bgcolor="#E6E6FA">
+<body >
     <div class="navbar navbar-default"> 
         <div class="container">
             <div class="navbar-header">
@@ -20,7 +20,7 @@
         </div>
     </div>
     <!-- NAVBAR CODE END -->
-    <div class="container">
+    <div class="container" >
         <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>CurioCity Profile Questions</h2>
@@ -45,7 +45,7 @@
                             <div class = "carousel-inner">
 
                                 <div class = "item active">
-                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" /> 
+                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" size = 110%/> 
                                 </div>
 
                                 <div class = "item">
