--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -45,7 +45,7 @@
                             <div class = "carousel-inner">
 
                                 <div class = "item active">
-                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" size = 110%/> 
+                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" /> 
                                 </div>
 
                                 <div class = "item">
