--- a/app/assets/stylesheets/custon.scss.css
+++ b/app/assets/stylesheets/custon.scss.css
@@ -1,19 +1,5 @@
-.navbar-default {
-  background-color: #EFEFEB;
-}
-
-.navbar-default .navbar-brand {
-  font-family: guardian-egyptt, georgia, serif;
-  font-weight: 400;
-  color: #d5641c;
-  font-size: 30px;
-}
-
-.navbar-default .navbar-nav > li > a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  color: #0192B5;
+html body {
+    background-color: #b0c4de;
 }
 
 .checkbox {
