--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -45,7 +45,7 @@
                             <div class = "carousel-inner">
 
                                 <div class = "item active">
-                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" /> 
+                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" width = "200%" height ="100%"  /> 
                                 </div>
 
                                 <div class = "item">
@@ -53,10 +53,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
 
                     <div class="description">
                        <h4> Joanne Greeley </h4>
