--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -45,7 +45,7 @@
                             <div class = "carousel-inner">
 
                                 <div class = "item active">
-                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" width = "200%" height ="100%"  /> 
+                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive"   /> 
                                 </div>
 
                                 <div class = "item">
@@ -97,13 +97,13 @@
                                                 Art
                                             </label>
                                         </div>
-                                        <div class="checkbox checkbox-primary">
+                                        <div class="checkbox checkbox-success">
                                             <input id="checkbox1" type="checkbox" disabled="disabled" checked="checked">
                                             <label for="checkbox2">
                                                 Drama
                                             </label>
                                         </div>
-                                        <div class="checkbox checkbox-primary">
+                                        <div class="checkbox checkbox-success">
                                             <input id="checkbox1" type="checkbox" disabled="disabled" checked="checked">
                                             <label for="checkbox3">
                                                 Foods and Nutrition
