--- a/app/assets/stylesheets/custon.scss.css
+++ b/app/assets/stylesheets/custon.scss.css
@@ -2,21 +2,20 @@ html body {
     background-color: #eaeaea;
 }
 
-.col-md-3 {
-  background-color: #ffffff
-}
+ .user-wrapper .btn {
+        border-radius: 0px;
+        -webkit-border-radius: 0px;
+        -moz-border-radius: 0px;
+        margin: 5px;
+    }
 
-.col-md-9 {
-  background-color: #ffffff;
-
-}
-
-/* GENERAL STYLES */
-body {
-    font-family: Verdana;
-    background-color: #EAEAEA;
-}
-
+    .user-wrapper  {
+        padding: 25px;
+        background-color: #fff;
+    }
+    .user-wrapper img {
+        width:100%;
+    }
 
 
 
