--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -23,7 +23,7 @@
     <div class="container" >
         <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>CurioCity Profile Questions</h2>
+                    <h2>Profile Questions</h2>
 
                    
                     <br />
@@ -45,7 +45,7 @@
                             <div class = "carousel-inner">
 
                                 <div class = "item active">
-                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive"   /> 
+                                   <img src="http://i.imgur.com/zbK79rM.jpg" class="img-responsive" \  /> 
                                 </div>
 
                                 <div class = "item">
@@ -61,7 +61,7 @@
                             Red Seal; Construction Business Owner 
                         </p>
                         <hr />
-                        <h5> <strong> Background Information </strong> </h5>
+                        <h5> <strong> Brief Description </strong> </h5>
                                              <p>
                           Through my construction business, I do electrical work related to house renovations – rewiring when necessary, changing household heating parts, switches and lighting.  I specialize in hanging and wiring chandeliers.  
                     </p>
@@ -76,14 +76,16 @@
 
                         <div class="row">
                               <div class="col-md-6">
-                                <ul>
-                            <li><h2> Background information: </h2></li>
+
+                                <h2> Background information: </h2>
+                                <br>
+    
                                 <ul>
                                     <li>I was born/grew up in <b> Topsail, Conception Bay South, NL </b></li>
                                     <li>I now live in <b> St. John’s, NL </b></li>
                                     <li>I completed my training/education at <b> Academy Canada and College of the North Atlantic</b>, St. John’s.</li>
                                 </ul>   
-                            </li>   
+  
                         </ul>
                               </div>
                               <div class="col-md-6">
@@ -133,13 +135,7 @@
                                         <div class="checkbox checkbox-success">
                                             <input id="checkbox1" type="checkbox" disabled="disabled" >
                                             <label for="checkbox6">
-                                            Physical Education/Health 
-                                            </label>
-                                        </div>
-                                        <div class="checkbox checkbox-success">
-                                            <input id="checkbox1" type="checkbox" disabled="disabled" >
-                                            <label for="checkbox6">
-                                            Science
+                                            Music
                                             </label>
                                         </div>
                                         <div class="checkbox checkbox-success">
@@ -148,13 +144,26 @@
                                             Technology
                                             </label>
                                         </div>
+
+                                        <div class="checkbox checkbox-success">
+                                            <input id="checkbox1" type="checkbox" disabled="disabled" >
+                                            <label for="checkbox6">
+                                            Science
+                                            </label>
+                                        </div>
+                                            <div class="checkbox checkbox-success">
+                                            <input id="checkbox1" type="checkbox" disabled="disabled" >
+                                            <label for="checkbox6">
+                                            Physical Education/Health 
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
                                 
                               </div>
                                  </div>                             
                             </div>
-
+<hr>
                        
                     <h3> Describe what you do at work </h3>
 						<p>When I am working on jobs under contract, our supervisor will complete a safety toolbox talk before we start work for the day. The supervisor/contractor will then assign tasks. Depending on the task assigned I will use a variety of math and estimation skills, particularly when something has to be installed in a certain space. Often I engage in a lot of problem solving as I figure out how to install the item in a particular location. This may require I use some carpentry skills. I also have to make sure the electrical components are installed according to the safety codes. </p>
@@ -169,8 +178,8 @@
                     <hr />  
                     <h3> What advice or encouragement would you give others seeking a similar career? </h3>
                         <p> If you are interested in a career where you work with your hands, engage in problem solving, and where your work situation will change from day to day, the career of electrician could be for you. The program is challenging but once you finished the opportunities for growth and advancement are almost unlimited. </p>
-                    <hr />       
-                   
+     
+                   <hr>
                     </div>
                  
                 </div>
